     enhancement, it takes 4.2 and 5.7 seconds on 1e3 and 1e7 unique values.

  o  Binary search is now capable of subsetting NA/NaNs and also perform joins and merges by matching NAs/NaNs.

  o  Fast radix order for int and double gains a new 'decreasing = TRUE/FALSE' argument, which allows it to order or sort 
     in descending order as well (to be used to replace 'order' to 'fastorder' in 'i').

BUG FIXES

  o  Long outstanding (usually small) memory leak in grouping fixed. When the last group is smaller
     than the largest group, the difference in those sizes was not being released. Also in non-trivial
     aggregations where each group returns a different number of rows. Most users run a grouping
     query once and will never have noticed these, but anyone looping calls to grouping (such as when
     running in parallel, or benchmarking) may have suffered, #2648. Tests added.
     Thanks to many including vc273, Y T (**and others to add**) :
       http://stackoverflow.com/questions/20349159/memory-leak-in-data-table-grouped-assignment-by-reference
       http://stackoverflow.com/questions/15651515/slow-memory-leak-in-data-table-when-returning-named-lists-in-j-trying-to-reshap
       
  o  If fread returns a data error (such as unbalanced quotes on a particular line) it now
     closes the file first rather than holding a lock open, a Windows only problem.
     Thanks to nigmastar for reporting and Carl Witthoft for the hint. Tests added.
       http://stackoverflow.com/questions/18597123/fread-data-table-locks-files
       
  o  DT[0,col:=value] is now a helpful error rather than crash, #2754. Thanks to Ricardo Saporta
     for reporting. DT[NA,col:=value]'s error message has also been improved. Tests added.
     
  o  Assigning to the same column twice in the same query is now an error rather than a crash in
     some circumstances; e.g., DT[,c("B","B"):=NULL] (delete by reference the same column twice).